fix: simplify assertions in UserServiceTest by using getFirst()